--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -32,6 +32,7 @@
         "@react-spring/web": "^9.7.3",
         "@tanstack/react-query": "^5.27.5",
         "ramda": "0.30.1",
+        "ramda-adjunct": "^5.0.1",
         "react-icons": "^4",
         "viem": "^2",
         "wagmi": "^2"
