--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -19,6 +19,7 @@
         "@ant-design/web3-icons": "^1.6.0",
         "@cartesi/rollups-explorer-ui": "*",
         "@cartesi/rollups-wagmi": "*",
+        "@mantine/code-highlight": "^7.7.1",
         "@mantine/core": "^7.7.1",
         "@mantine/form": "^7.7.1",
         "@mantine/hooks": "^7.7.1",
@@ -34,11 +35,15 @@
         "encoding": "^0.1",
         "graphql": "^16",
         "graphql-tag": "^2",
+        "highlight.js": "11.10.0",
+        "highlightjs-solidity": "^2.0.6",
+        "jotai": "^2.9.0",
         "lokijs": "^1",
         "next": "^14.1.4",
         "pino-pretty": "^10",
         "pretty-ms": "^8",
-        "ramda": "^0.29.0",
+        "ramda": "0.30.1",
+        "ramda-adjunct": "^5.0.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-icons": "^4",
@@ -64,7 +69,7 @@
         "@testing-library/jest-dom": "^6.1.3",
         "@testing-library/react": "^14.0.0",
         "@types/node": "^20",
-        "@types/ramda": "^0.29.3",
+        "@types/ramda": "^0.30.1",
         "@types/react": "^18.2.42",
         "@types/react-dom": "^18.2.17",
         "@vitejs/plugin-react": "^4.1.0",
