chore: Update env file for each chain.

--- a/apps/web/.env.optimism-mainnet
+++ b/apps/web/.env.optimism-mainnet
@@ -1,2 +1,2 @@
 NEXT_PUBLIC_CHAIN_ID=10
-NEXT_PUBLIC_EXPLORER_API_URL="https://optimism.api.cartesiscan.io/graphql"
+NEXT_PUBLIC_EXPLORER_API_URL="https://api.cartesiscan.io/graphql"
