--- a/apps/web/.env.base-mainnet
+++ b/apps/web/.env.base-mainnet
@@ -1,2 +1,2 @@
 NEXT_PUBLIC_CHAIN_ID=8453
-NEXT_PUBLIC_EXPLORER_API_URL="https://base.api.cartesiscan.io/graphql"
+NEXT_PUBLIC_EXPLORER_API_URL="https://api.cartesiscan.io/graphql"
