--- a/apps/web/.env.base-sepolia
+++ b/apps/web/.env.base-sepolia
@@ -1,2 +1,2 @@
 NEXT_PUBLIC_CHAIN_ID=84532
-NEXT_PUBLIC_EXPLORER_API_URL="https://base-sepolia.api.cartesiscan.io/graphql"
+NEXT_PUBLIC_EXPLORER_API_URL="https://api.cartesiscan.io/graphql"
