--- a/apps/web/.env.optimism-sepolia
+++ b/apps/web/.env.optimism-sepolia
@@ -1,2 +1,2 @@
 NEXT_PUBLIC_CHAIN_ID=11155420
-NEXT_PUBLIC_EXPLORER_API_URL="https://optimism-sepolia.api.cartesiscan.io/graphql"
+NEXT_PUBLIC_EXPLORER_API_URL="https://api.cartesiscan.io/graphql"
