--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
             - name: Setup Node.js environment
               uses: actions/setup-node@v3
               with:
-                  node-version: latest
+                  node-version: 22.6.0
                   cache: "yarn"
 
             - name: Install Dependencies
