--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -13,7 +13,7 @@ jobs:
             - name: Setup Node.js environment
               uses: actions/setup-node@v4
               with:
-                  node-version: latest
+                  node-version: 22.6.0
                   cache: "yarn"
 
             - name: Install dependencies
