--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -22,6 +22,7 @@
         "lint": "eslint \"src/**/*.ts*\"",
         "test": "vitest run",
         "test:watch": "vitest",
+        "test:ui": "vitest --ui",
         "test:ci": "vitest run --coverage"
     },
     "dependencies": {
@@ -50,6 +51,7 @@
         "@types/react": "^18.3.3",
         "@types/react-dom": "^18.3.0",
         "@vitest/coverage-v8": "^2.0.5",
+        "@vitest/ui": "^2.0.5",
         "eslint": "^8",
         "eslint-config-cartesi": "*",
         "jsdom": "^22.1.0",
