--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,6 +11,7 @@
         "lint": "next lint",
         "test": "vitest run",
         "test:watch": "vitest",
+        "test:ui": "vitest --ui",
         "test:ci": "vitest run --coverage",
         "test:e2e": "playwright test",
         "test:e2e:ui": "playwright test --ui"
@@ -64,18 +65,20 @@
         "@graphql-typed-document-node/core": "^3",
         "@playwright/test": "^1.43.1",
         "@sunodo/wagmi-plugin-hardhat-deploy": "^0.2",
-        "@testing-library/jest-dom": "^6.4.8",
+        "@testing-library/jest-dom": "^6.5.0",
         "@testing-library/react": "^16.0.0",
         "@types/node": "^20",
         "@types/ramda": "^0.30.1",
         "@types/react": "^18.3.3",
         "@types/react-dom": "^18.3.0",
-        "@vitejs/plugin-react": "^4.1.0",
-        "@vitest/coverage-v8": "0.34.2",
+        "@vitejs/plugin-react": "^4.3.1",
+        "@vitest/coverage-v8": "^2.0.5",
+        "@vitest/ui": "^2.0.5",
         "@wagmi/cli": "^2",
         "dotenv-cli": "7.3.0",
         "eslint": "^8",
         "eslint-config-cartesi": "*",
+        "happy-dom": "^15.0.0",
         "jsdom": "22.1.0",
         "npm-run-all": "^4",
         "postcss": "^8",
@@ -83,6 +86,6 @@
         "postcss-simple-vars": "^7",
         "ts-node": "^10",
         "typescript": "^5",
-        "vitest": "0.34.2"
+        "vitest": "^2.0.5"
     }
 }
