--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -22,6 +22,7 @@
         "lint": "eslint \"src/**/*.ts*\"",
         "test": "vitest run",
         "test:watch": "vitest",
+        "test:ui": "vitest --ui",
         "test:ci": "vitest run --coverage"
     },
     "dependencies": {
@@ -44,19 +45,20 @@
     },
     "devDependencies": {
         "@cartesi/tsconfig": "*",
-        "@testing-library/jest-dom": "^6.4.8",
+        "@testing-library/jest-dom": "^6.5.0",
         "@testing-library/react": "^16.0.0",
         "@types/ramda": "^0.30.1",
         "@types/react": "^18.3.3",
         "@types/react-dom": "^18.3.0",
-        "@vitest/coverage-v8": "^0.34.5",
+        "@vitest/coverage-v8": "^2.0.5",
+        "@vitest/ui": "^2.0.5",
         "eslint": "^8",
         "eslint-config-cartesi": "*",
         "jsdom": "^22.1.0",
         "react": "^18.3.1",
         "tsup": "^7",
         "typescript": "^5",
-        "vitest": "^0.34.5"
+        "vitest": "^2.0.5"
     },
     "publishConfig": {
         "access": "public"
