--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,9 +14,7 @@
         "test:ui": "vitest --ui",
         "test:ci": "vitest run --coverage",
         "test:e2e": "playwright test",
-        "test:e2e:ui": "playwright test --ui",
-        "test:pw": "playwright test e2e/transactions/depositEther.spec.ts",
-        "test:e2e:pw": "start-server-and-test 'yarn start' http://localhost:300 'yarn test:pw'"
+        "test:e2e:ui": "playwright test --ui"
     },
     "dependencies": {
         "@cartesi/rollups-explorer-ui": "*",
