--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -12,9 +12,11 @@ jobs:
             - name: Check out code
               uses: actions/checkout@v4
 
-            - uses: actions/setup-node@v4
+            - name: Setup Node.js environment
+              uses: actions/setup-node@v4
               with:
-                node-version: 18
+                node-version: 22.6.0
+                cache: "yarn"
 
             - name: Install dependencies
               run: yarn install --frozen-lockfile
