--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -47,6 +47,7 @@
         "react-icons": "^4",
         "react-jazzicon": "^1",
         "urql": "^4",
+        "uuid": "^10.0.0",
         "viem": "^2",
         "wagmi": "^2"
     },
