--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -71,6 +71,7 @@
         "@types/ramda": "^0.30.1",
         "@types/react": "^18.3.3",
         "@types/react-dom": "^18.3.0",
+        "@types/uuid": "^10.0.0",
         "@vitejs/plugin-react": "^4.1.0",
         "@vitest/coverage-v8": "0.34.2",
         "@wagmi/cli": "^2",
