--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,6 +14,7 @@
         "test:ui": "vitest --ui",
         "test:ci": "vitest run --coverage",
         "test:e2e": "playwright test ./e2e/layout/ ./e2e/pages && xvfb-run npx playwright test ./e2e/transactions/",
+        "test:e2e:local": "playwright test",
         "test:e2e:ui": "playwright test --ui"
     },
     "dependencies": {
