--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -27,6 +27,7 @@
         "@mantine/notifications": "^7.12.0",
         "@rainbow-me/rainbowkit": "2",
         "@react-spring/web": "^9.7.3",
+        "@shazow/whatsabi": "^0.14.1",
         "@tanstack/react-query": "^5.27.5",
         "@vercel/analytics": "^1.2.2",
         "@vercel/speed-insights": "^1.0.10",
