--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,7 +13,8 @@
         "test:watch": "vitest",
         "test:ui": "vitest --ui",
         "test:ci": "vitest run --coverage",
-        "test:e2e": "playwright test",
+        "test:e2e": "playwright test ./e2e/layout/ ./e2e/pages && xvfb-run npx playwright test ./e2e/transactions/",
+        "test:e2e:local": "playwright test",
         "test:e2e:ui": "playwright test --ui"
     },
     "dependencies": {
@@ -63,8 +64,9 @@
         "@graphql-codegen/typescript-operations": "^4",
         "@graphql-codegen/typescript-urql": "^4",
         "@graphql-typed-document-node/core": "^3",
-        "@playwright/test": "^1.43.1",
+        "@playwright/test": "^1.37.0",
         "@sunodo/wagmi-plugin-hardhat-deploy": "^0.2",
+        "@synthetixio/synpress": "^3.7.3",
         "@testing-library/jest-dom": "^6.5.0",
         "@testing-library/react": "^16.0.0",
         "@types/node": "^20",
