--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -49,6 +49,7 @@
         "react-icons": "^4",
         "react-jazzicon": "^1",
         "urql": "^4",
+        "uuid": "^10.0.0",
         "viem": "^2",
         "wagmi": "^2"
     },
@@ -73,6 +74,7 @@
         "@types/ramda": "^0.30.1",
         "@types/react": "^18.3.3",
         "@types/react-dom": "^18.3.0",
+        "@types/uuid": "^10.0.0",
         "@vitejs/plugin-react": "^4.3.1",
         "@vitest/coverage-v8": "^2.0.5",
         "@vitest/ui": "^2.0.5",
