--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -36,6 +36,7 @@
         "ramda-adjunct": "^5.0.1",
         "react-icons": "^4",
         "viem": "^2",
+        "uuid": "^11.0.3",
         "wagmi": "^2"
     },
     "peerDependencies": {
