--- a/turbo.json
+++ b/turbo.json
@@ -5,6 +5,7 @@
         "BASE_PATH",
         "NEXT_PUBLIC_CHAIN_ID",
         "NEXT_PUBLIC_EXPLORER_API_URL",
+        "NEXT_PUBLIC_PREVIEW_EXPLORER_API_URL",
         "NEXT_PUBLIC_ALCHEMY_API_KEY",
         "CI",
         "E2E_BASE_URL",
