chore(ci): Set the Preview endpoint when available in the CI settings.

--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -11,6 +11,8 @@ permissions:
     contents: read
     packages: write
     id-token: write
+env:
+    NEXT_PUBLIC_PREVIEW_EXPLORER_API_URL: ${{vars.NEXT_PUBLIC_PREVIEW_EXPLORER_API_URL}}
 jobs:
     build:
         runs-on: ubuntu-latest
