--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,7 @@ concurrency:
     cancel-in-progress: true
 env:
     NEXT_PUBLIC_EXPLORER_API_URL: http://localhost:4350/graphql
+    NEXT_PUBLIC_PREVIEW_EXPLORER_API_URL: ${{ vars.NEXT_PUBLIC_PREVIEW_EXPLORER_API_URL }}
 jobs:
     ci:
         runs-on: ubuntu-latest
