--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -1,6 +1,8 @@
 name: End-to-end testing
 on:
     deployment_status:
+env:
+    NEXT_PUBLIC_PREVIEW_EXPLORER_API_URL: ${{vars.NEXT_PUBLIC_PREVIEW_EXPLORER_API_URL}}
 jobs:
     e2e:
         if: github.event_name == 'deployment_status' && github.event.deployment_status.state == 'success' && contains(github.event.deployment_status.environment_url, 'rollups-explorer-sepolia')
