chore(ci): Set temporary preview var for Docker builds.

--- a/apps/web/.env.sunodo
+++ b/apps/web/.env.sunodo
@@ -2,3 +2,5 @@ NEXT_PUBLIC_CHAIN_ID=31337
 NEXT_PUBLIC_EXPLORER_API_URL="http://localhost:8080/explorer-api/graphql"
 INTERNAL_EXPLORER_API_URL="http://explorer_api:4350/graphql"
 BASE_PATH="/explorer"
+# TODO: Remove temp variable expansion
+NEXT_PUBLIC_PREVIEW_EXPLORER_API_URL=${PREVIEW_API_URL}
