--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -12,7 +12,7 @@ permissions:
     packages: write
     id-token: write
 env:
-    NEXT_PUBLIC_PREVIEW_EXPLORER_API_URL: ${{vars.NEXT_PUBLIC_PREVIEW_EXPLORER_API_URL}}
+    PREVIEW_API_URL: ${{vars.NEXT_PUBLIC_PREVIEW_EXPLORER_API_URL}}
 jobs:
     build:
         runs-on: ubuntu-latest
