--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,95 +1,99 @@
 {
-    "name": "web",
-    "private": true,
-    "version": "0.0.0",
-    "scripts": {
-        "build": "next build",
-        "clean": "rm -rf .turbo && rm -rf node_modules && rm -rf .next",
-        "codegen": "dotenv -e .env -c -- graphql-codegen",
-        "dev": "next dev",
-        "start": "next start",
-        "lint": "next lint",
-        "test": "vitest run",
-        "test:watch": "vitest",
-        "test:ui": "vitest --ui",
-        "test:ci": "vitest run --coverage",
-        "test:e2e": "playwright test ./e2e/layout/ ./e2e/pages && xvfb-run npx playwright test ./e2e/transactions/metamask.spec.ts --project chromium",
-        "test:e2e:local": "playwright test",
-        "test:e2e:ui": "playwright test --ui"
-    },
-    "dependencies": {
-        "@cartesi/rollups-explorer-ui": "*",
-        "@cartesi/rollups-wagmi": "*",
-        "@mantine/code-highlight": "^7.12.0",
-        "@mantine/core": "^7.12.0",
-        "@mantine/form": "^7.12.0",
-        "@mantine/hooks": "^7.12.0",
-        "@mantine/notifications": "^7.12.0",
-        "@rainbow-me/rainbowkit": "2",
-        "@react-spring/web": "^9.7.3",
-        "@shazow/whatsabi": "^0.14.1",
-        "@tanstack/react-query": "^5.27.5",
-        "@vercel/analytics": "^1.2.2",
-        "@vercel/speed-insights": "^1.0.10",
-        "dexie": "^4.0.4",
-        "encoding": "^0.1",
-        "graphql": "^16",
-        "graphql-tag": "^2",
-        "highlight.js": "11.10.0",
-        "highlightjs-solidity": "^2.0.6",
-        "jotai": "^2.9.0",
-        "lokijs": "^1",
-        "next": "^14.2.21",
-        "pino-pretty": "^10",
-        "pretty-ms": "^8",
-        "ramda": "0.30.1",
-        "ramda-adjunct": "^5.0.1",
-        "react": "^18.3.1",
-        "react-dom": "^18.3.1",
-        "react-icons": "^4",
-        "react-jazzicon": "^1",
-        "urql": "^4",
-        "uuid": "^10.0.0",
-        "viem": "^2",
-        "wagmi": "^2"
-    },
-    "devDependencies": {
-        "@cartesi/tsconfig": "*",
-        "@graphql-codegen/add": "^5",
-        "@graphql-codegen/cli": "^5",
-        "@graphql-codegen/client-preset": "^4",
-        "@graphql-codegen/import-types-preset": "^3.0.0",
-        "@graphql-codegen/named-operations-object": "^3.0.0",
-        "@graphql-codegen/typed-document-node": "^5",
-        "@graphql-codegen/typescript": "^4",
-        "@graphql-codegen/typescript-operations": "^4",
-        "@graphql-codegen/typescript-urql": "^4",
-        "@graphql-typed-document-node/core": "^3",
-        "@playwright/test": "^1.37.0",
-        "@sunodo/wagmi-plugin-hardhat-deploy": "^0.2",
-        "@synthetixio/synpress": "^3.7.3",
-        "@testing-library/jest-dom": "^6.5.0",
-        "@testing-library/react": "^16.0.0",
-        "@types/node": "^20",
-        "@types/ramda": "^0.30.1",
-        "@types/react": "^18.3.3",
-        "@types/react-dom": "^18.3.0",
-        "@types/uuid": "^10.0.0",
-        "@vitejs/plugin-react": "^4.3.1",
-        "@vitest/coverage-v8": "^2.0.5",
-        "@vitest/ui": "^2.0.5",
-        "@wagmi/cli": "^2",
-        "dotenv-cli": "7.3.0",
-        "eslint": "^8",
-        "eslint-config-cartesi": "*",
-        "happy-dom": "^15.10.2",
-        "jsdom": "22.1.0",
-        "npm-run-all": "^4",
-        "postcss": "^8",
-        "postcss-preset-mantine": "^1.12.3",
-        "postcss-simple-vars": "^7",
-        "ts-node": "^10",
-        "typescript": "^5",
-        "vitest": "^2.0.5"
-    }
+  "name": "web",
+  "private": true,
+  "version": "0.0.0",
+  "scripts": {
+    "build": "next build",
+    "clean": "rm -rf .turbo && rm -rf node_modules && rm -rf .next",
+    "codegen": "dotenv -e .env -c -- graphql-codegen",
+    "dev": "next dev --turbopack",
+    "start": "next start",
+    "lint": "next lint",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:ui": "vitest --ui",
+    "test:ci": "vitest run --coverage",
+    "test:e2e": "playwright test ./e2e/layout/ ./e2e/pages && xvfb-run npx playwright test ./e2e/transactions/metamask.spec.ts --project chromium",
+    "test:e2e:local": "playwright test",
+    "test:e2e:ui": "playwright test --ui"
+  },
+  "dependencies": {
+    "@cartesi/rollups-explorer-ui": "*",
+    "@cartesi/rollups-wagmi": "*",
+    "@mantine/code-highlight": "^7.12.0",
+    "@mantine/core": "^7.12.0",
+    "@mantine/form": "^7.12.0",
+    "@mantine/hooks": "^7.12.0",
+    "@mantine/notifications": "^7.12.0",
+    "@rainbow-me/rainbowkit": "2",
+    "@react-spring/web": "^9.7.3",
+    "@shazow/whatsabi": "^0.14.1",
+    "@tanstack/react-query": "^5.27.5",
+    "@vercel/analytics": "^1.2.2",
+    "@vercel/speed-insights": "^1.0.10",
+    "dexie": "^4.0.4",
+    "encoding": "^0.1",
+    "graphql": "^16",
+    "graphql-tag": "^2",
+    "highlight.js": "11.10.0",
+    "highlightjs-solidity": "^2.0.6",
+    "jotai": "^2.9.0",
+    "lokijs": "^1",
+    "next": "15.1.3",
+    "pino-pretty": "^10",
+    "pretty-ms": "^8",
+    "ramda": "0.30.1",
+    "ramda-adjunct": "^5.0.1",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-icons": "^4",
+    "react-jazzicon": "^1",
+    "urql": "^4",
+    "uuid": "^10.0.0",
+    "viem": "^2",
+    "wagmi": "^2"
+  },
+  "devDependencies": {
+    "@cartesi/tsconfig": "*",
+    "@graphql-codegen/add": "^5",
+    "@graphql-codegen/cli": "^5",
+    "@graphql-codegen/client-preset": "^4",
+    "@graphql-codegen/import-types-preset": "^3.0.0",
+    "@graphql-codegen/named-operations-object": "^3.0.0",
+    "@graphql-codegen/typed-document-node": "^5",
+    "@graphql-codegen/typescript": "^4",
+    "@graphql-codegen/typescript-operations": "^4",
+    "@graphql-codegen/typescript-urql": "^4",
+    "@graphql-typed-document-node/core": "^3",
+    "@playwright/test": "^1.37.0",
+    "@sunodo/wagmi-plugin-hardhat-deploy": "^0.2",
+    "@synthetixio/synpress": "^3.7.3",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.1.0",
+    "@types/node": "^20",
+    "@types/ramda": "^0.30.1",
+    "@types/react": "19.0.2",
+    "@types/react-dom": "19.0.2",
+    "@types/uuid": "^10.0.0",
+    "@vitejs/plugin-react": "^4.3.1",
+    "@vitest/coverage-v8": "^2.0.5",
+    "@vitest/ui": "^2.0.5",
+    "@wagmi/cli": "^2",
+    "dotenv-cli": "7.3.0",
+    "eslint": "^8",
+    "eslint-config-cartesi": "*",
+    "happy-dom": "^15.10.2",
+    "jsdom": "22.1.0",
+    "npm-run-all": "^4",
+    "postcss": "^8",
+    "postcss-preset-mantine": "^1.12.3",
+    "postcss-simple-vars": "^7",
+    "ts-node": "^10",
+    "typescript": "^5",
+    "vitest": "^2.0.5"
+  },
+  "resolutions": {
+    "@types/react": "19.0.2",
+    "@types/react-dom": "19.0.2"
+  }
 }
