--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -6,7 +6,7 @@
         "build": "next build",
         "clean": "rm -rf .turbo && rm -rf node_modules && rm -rf .next",
         "codegen": "dotenv -e .env -c -- graphql-codegen",
-        "dev": "next dev",
+        "dev": "next dev --turbopack",
         "start": "next start",
         "lint": "next lint",
         "test": "vitest run",
@@ -39,13 +39,13 @@
         "highlightjs-solidity": "^2.0.6",
         "jotai": "^2.9.0",
         "lokijs": "^1",
-        "next": "^14.2.21",
+        "next": "15.1.3",
         "pino-pretty": "^10",
         "pretty-ms": "^8",
         "ramda": "0.30.1",
         "ramda-adjunct": "^5.0.1",
-        "react": "^18.3.1",
-        "react-dom": "^18.3.1",
+        "react": "19.0.0",
+        "react-dom": "19.0.0",
         "react-icons": "^4",
         "react-jazzicon": "^1",
         "urql": "^4",
@@ -68,12 +68,12 @@
         "@playwright/test": "^1.37.0",
         "@sunodo/wagmi-plugin-hardhat-deploy": "^0.2",
         "@synthetixio/synpress": "^3.7.3",
-        "@testing-library/jest-dom": "^6.5.0",
-        "@testing-library/react": "^16.0.0",
+        "@testing-library/jest-dom": "^6.6.3",
+        "@testing-library/react": "^16.1.0",
         "@types/node": "^20",
         "@types/ramda": "^0.30.1",
-        "@types/react": "^18.3.3",
-        "@types/react-dom": "^18.3.0",
+        "@types/react": "19.0.2",
+        "@types/react-dom": "19.0.2",
         "@types/uuid": "^10.0.0",
         "@vitejs/plugin-react": "^4.3.1",
         "@vitest/coverage-v8": "^2.0.5",
@@ -91,5 +91,9 @@
         "ts-node": "^10",
         "typescript": "^5",
         "vitest": "^2.0.5"
+    },
+    "resolutions": {
+        "@types/react": "19.0.2",
+        "@types/react-dom": "19.0.2"
     }
 }
