--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
         "format:check": "prettier \"**/*.{ts,tsx}\" --check",
         "format": "prettier --write \"**/*.{ts,tsx,md}\"",
         "test": "turbo run test",
-        "test:ci": "turbo run test:ci",
+        "test:ci": "turbo run test:ci --filter=!workshop",
         "test:e2e": "turbo run test:e2e",
         "changeset": "changeset",
         "version-packages": "changeset version",
