--- a/apps/web/public/manifest.json
+++ b/apps/web/public/manifest.json
@@ -9,8 +9,8 @@
     "start_url": ".",
     "icons": [
         {
-            "src": "favicon-32x32.png",
-            "sizes": "32x32",
+            "src": "cartesi-logo-192x192.png",
+            "sizes": "192x192",
             "type": "image/png"
         }
     ]
