--- a/apps/web/public/manifest.json
+++ b/apps/web/public/manifest.json
@@ -12,6 +12,17 @@
             "src": "cartesi-logo-192x192.png",
             "sizes": "192x192",
             "type": "image/png"
+        },
+        {
+            "src": "cartesi-logo-512x512.png",
+            "sizes": "512x512",
+            "type": "image/png"
+        },
+        {
+            "src": "maskable-icon-196x196.png",
+            "sizes": "196x196",
+            "type": "image/png",
+            "purpose": "any maskable"
         }
     ]
 }
