--- a/package.json
+++ b/package.json
@@ -29,9 +29,9 @@
         "lcov-result-merger": "4.1.0",
         "prettier": "3.5.3",
         "turbo": "^1.10.13"
-    },
-    "engines": {
-        "node": ">=18.0.0"
+    },    
+     "engines": {
+        "node": ">=22.x"
     },
     "packageManager": "yarn@1.22.19"
 }
