refactor(web): Allow custom devnet node-rpc endpoints. Centralise viem-clients sourcing. Update .env.cartesi.

--- a/apps/web/.env.template
+++ b/apps/web/.env.template
@@ -2,5 +2,7 @@
 # CREATE YOUR OWN .env and use the following environment variables with values as fit
 #NEXT_PUBLIC_CHAIN_ID=1
 #NEXT_PUBLIC_EXPLORER_API_URL=YOUR_SQUID_API_HERE
-#NEXT_PUBLIC_ALCHEMY_API_KEY=YOUR_ALCHEMY_API_KEY 
+# e.g. Alchemy / Infura
+#NEXT_PUBLIC_NODE_RPC_URL=YOUR_NODE_RPC_PROVIDER_URL
+# e.g. When using docker with ip name aliases for container services. Check .env.cartesi for reference.
 #INTERNAL_EXPLORER_API_URL=OPTIONAL_INTERNAL_EXPLORER_API_URL
