chore: Bump cartesi/rollups to its v2 stable version.
* Change wagm-rollups package to use bundler module resolution in preparation to use @cartesi/viem package.

--- a/packages/rollups-wagmi/tsconfig.json
+++ b/packages/rollups-wagmi/tsconfig.json
@@ -4,6 +4,7 @@
     "exclude": ["dist", "build", "node_modules"],
     "compilerOptions": {
         "resolveJsonModule": true,
-        "esModuleInterop": true
+        "esModuleInterop": true,
+        "moduleResolution": "bundler"
     }
 }
