feat: Use module resolution "bundler" to allow imports from internal packages

--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -2,7 +2,8 @@
     "extends": "@cartesi/tsconfig/nextjs.json",
     "compilerOptions": {
         "plugins": [{ "name": "next" }],
-        "types": ["vitest/globals"]
+        "types": ["vitest/globals"],
+        "moduleResolution": "bundler"
     },
     "include": [
         "src",
