feat: Disable declaration in order to mitigate ts error with createFormContext exports

--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -3,7 +3,8 @@
     "compilerOptions": {
         "plugins": [{ "name": "next" }],
         "types": ["vitest/globals"],
-        "moduleResolution": "bundler"
+        "moduleResolution": "bundler",
+        "declaration": false
     },
     "include": [
         "src",
