--- a/packages/domain/package.json
+++ b/packages/domain/package.json
@@ -1,20 +1,37 @@
 {
     "name": "@cartesi/rollups-explorer-domain",
     "version": "0.0.0",
+    "main": "dist/index.js",
+    "types": "dist/index.d.ts",
     "exports": {
-        "./explorer-hooks": "./src/graphql/explorer/hooks/queries.tsx",
-        "./explorer-operations": "./src/graphql/explorer/operations.ts",
-        "./explorer-types": "./src/graphql/explorer/types.ts",
-        "./rollups-hooks": "./src/graphql/rollups/hooks/queries.tsx",
-        "./rollups-operations": "./src/graphql/rollups/operations.ts",
-        "./rollups-types": "./src/graphql/rollups/types.ts",
-        "./rollups-v2-hooks": "./src/graphql/rollups/v2/hooks/queries.tsx",
-        "./rollups-v2-operations": "./src/graphql/rollups/v2/operations.ts",
-        "./rollups-v2-types": "./src/graphql/rollups/v2/types.ts"
+        ".": "./dist/index.js",
+        "./explorer-operations": "./dist/explorer/operations.js",
+        "./explorer-hooks": "./dist/explorer/hooks/queries.js",
+        "./explorer-types": "./dist/explorer/types.js",
+        "./rollups-operations": "./dist/rollups/operations.js",
+        "./rollups-hooks": "./dist/rollups/hooks/queries.js",
+        "./rollups-types": "./dist/rollups/types.js",
+        "./rollups-v2-operations": "./dist/rollups/v2/operations.js",
+        "./rollups-v2-hooks": "./dist/rollups/v2/hooks/queries.js",
+        "./rollups-v2-types": "./dist/rollups/v2/types.js"
+    },
+    "typesVersions": {
+        "*": {
+            "explorer-operations": ["dist/explorer/operations.d.ts"],
+            "explorer-hooks": ["dist/explorer/hooks/queries.d.ts"],
+            "explorer-types": ["dist/explorer/types.d.ts"],
+            "rollups-operations": ["dist/rollups/operations.d.ts"],
+            "rollups-hooks": ["dist/rollups/hooks/queries.d.ts"],
+            "rollups-types": ["dist/rollups/types.d.ts"],
+            "rollups-v2-operations": ["dist/rollups/v2/operations.d.ts"],
+            "rollups-v2-hooks": ["dist/rollups/v2/hooks/queries.d.ts"],
+            "rollups-v2-types": ["dist/rollups/v2/types.d.ts"]
+        }
     },
     "sideEffects": false,
     "license": "Apache-2.0",
     "scripts": {
+        "build": "tsup",
         "clean": "rm -rf .turbo && rm -rf node_modules && rm -rf dist",
         "codegen": "dotenv -e .env -c -- graphql-codegen"
     },
@@ -32,6 +49,7 @@
         "@graphql-typed-document-node/core": "^3",
         "@types/node": "^20",
         "dotenv-cli": "7.3.0",
+        "tsup": "^8.5.0",
         "typescript": "^5"
     }
 }
