--- a/packages/domain/package.json
+++ b/packages/domain/package.json
@@ -2,6 +2,7 @@
     "name": "@cartesi/rollups-explorer-domain",
     "version": "0.0.0",
     "main": "dist/index.js",
+    "module": "./dist/index.mjs",
     "types": "dist/index.d.ts",
     "exports": {
         ".": "./dist/index.js",
