chore: Revert change to test:e2e pipeline

--- a/turbo.json
+++ b/turbo.json
@@ -53,6 +53,7 @@
             ]
         },
         "test:e2e": {
+            "dependsOn": ["codegen"],
             "outputs": ["playwright-report/**"],
             "inputs": ["src/**/*.ts", "src/**/*.tsx", "e2e/**/*.ts"]
         }
