feat: Move urql provider to domain package to mitigate react context errors

--- a/packages/domain/package.json
+++ b/packages/domain/package.json
@@ -36,6 +36,10 @@
         "clean": "rm -rf .turbo && rm -rf node_modules && rm -rf dist",
         "codegen": "dotenv -e .env -c -- graphql-codegen"
     },
+    "dependencies": {
+        "urql": "^4",
+        "react": "19.0.0"
+    },
     "devDependencies": {
         "@cartesi/tsconfig": "*",
         "@graphql-codegen/add": "^5",
