--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -5,7 +5,6 @@
     "scripts": {
         "build": "next build",
         "clean": "rm -rf .turbo && rm -rf node_modules && rm -rf .next",
-        "codegen": "dotenv -e .env -c -- graphql-codegen",
         "dev": "next dev --turbopack",
         "start": "next start",
         "lint": "next lint",
@@ -18,6 +17,7 @@
         "test:e2e:ui": "playwright test --ui"
     },
     "dependencies": {
+        "@cartesi/rollups-explorer-domain": "*",
         "@cartesi/rollups-explorer-ui": "*",
         "@cartesi/rollups-wagmi": "*",
         "@mantine/code-highlight": "^7.15.3",
