feat: Add capability to have runtime config available.

--- a/apps/web/.env.cartesi
+++ b/apps/web/.env.cartesi
@@ -1,5 +1,7 @@
+NEXT_PUBLIC_IS_CONTAINER="true"
 NEXT_PUBLIC_CHAIN_ID=13370
 NEXT_PUBLIC_EXPLORER_API_URL="http://127.0.0.1:6751/explorer-api/graphql"
 NEXT_PUBLIC_NODE_RPC_URL="http://127.0.0.1:6751/anvil"
 INTERNAL_EXPLORER_API_URL="http://explorer_api:4350/graphql"
 BASE_PATH="/explorer"
+NEXT_PUBLIC_BASE_PATH=$BASE_PATH
