--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -31,12 +31,12 @@
         "@mantine/core": "^7.15.3",
         "@mantine/form": "^7.15.3",
         "@mantine/hooks": "^7.15.3",
-        "@react-spring/web": "^9.7.3",
+        "@react-spring/web": "^10.0.1",
         "@tanstack/react-query": "^5.27.5",
-        "ramda": "0.30.1",
-        "ramda-adjunct": "^5.0.1",
-        "react-icons": "^4",
-        "uuid": "^11.0.3",
+        "ramda": "^0.31.3",
+        "ramda-adjunct": "^5.1.0",
+        "react-icons": "^5.5.0",
+        "uuid": "^11.1.0",
         "viem": "^2",
         "wagmi": "^2"
     },
@@ -48,19 +48,19 @@
     "devDependencies": {
         "@cartesi/tsconfig": "*",
         "@testing-library/jest-dom": "^6.6.3",
-        "@testing-library/react": "^16.1.0",
-        "@types/ramda": "^0.30.1",
-        "@types/react": "^19.0.2",
-        "@types/react-dom": "^19.0.2",
-        "@vitest/coverage-v8": "^2.0.5",
-        "@vitest/ui": "^2.0.5",
+        "@testing-library/react": "^16.3.0",
+        "@types/ramda": "^0.30.2",
+        "@types/react": "^19.1.8",
+        "@types/react-dom": "^19.1.6",
+        "@vitest/coverage-v8": "^3.2.4",
+        "@vitest/ui": "^3.2.4",
         "eslint": "^8",
         "eslint-config-cartesi": "*",
-        "jsdom": "^22.1.0",
-        "react": "^19.0.0",
-        "tsup": "^7",
+        "jsdom": "^26.1.0",
+        "react": "^19.1.0",
+        "tsup": "^8.5.0",
         "typescript": "^5",
-        "vitest": "^2.0.5"
+        "vitest": "^3.2.4"
     },
     "publishConfig": {
         "access": "public"
