--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -26,12 +26,12 @@
         "@mantine/hooks": "^7.15.3",
         "@mantine/notifications": "^7.15.3",
         "@rainbow-me/rainbowkit": "2",
-        "@react-spring/web": "^9.7.3",
+        "@react-spring/web": "^10.0.1",
         "@shazow/whatsabi": "^0.14.1",
         "@tanstack/react-query": "^5.27.5",
         "@vercel/analytics": "^1.2.2",
         "@vercel/speed-insights": "^1.0.10",
-        "dexie": "^4.0.4",
+        "dexie": "^4.0.11",
         "encoding": "^0.1",
         "graphql": "^16",
         "graphql-tag": "^2",
@@ -39,17 +39,17 @@
         "highlightjs-solidity": "^2.0.6",
         "jotai": "^2.9.0",
         "lokijs": "^1",
-        "next": "15.2.4",
+        "next": "15.3.5",
         "pino-pretty": "^10",
         "pretty-ms": "^8",
-        "ramda": "0.30.1",
-        "ramda-adjunct": "^5.0.1",
-        "react": "19.0.0",
-        "react-dom": "19.0.0",
-        "react-icons": "^4",
+        "ramda": "^0.31.3",
+        "ramda-adjunct": "^5.1.0",
+        "react": "19.1.0",
+        "react-dom": "19.1.0",
+        "react-icons": "^5.5.0",
         "react-jazzicon": "^1",
         "urql": "^4",
-        "uuid": "^10.0.0",
+        "uuid": "^11.1.0",
         "viem": "^2",
         "wagmi": "^2"
     },
@@ -69,31 +69,31 @@
         "@sunodo/wagmi-plugin-hardhat-deploy": "^0.2",
         "@synthetixio/synpress": "^3.7.3",
         "@testing-library/jest-dom": "^6.6.3",
-        "@testing-library/react": "^16.1.0",
+        "@testing-library/react": "^16.3.0",
         "@types/node": "^20",
-        "@types/ramda": "^0.30.1",
-        "@types/react": "19.0.2",
-        "@types/react-dom": "19.0.2",
+        "@types/ramda": "^0.30.2",
+        "@types/react": "19.1.8",
+        "@types/react-dom": "19.1.6",
         "@types/uuid": "^10.0.0",
         "@vitejs/plugin-react": "^4.3.1",
-        "@vitest/coverage-v8": "^2.0.5",
-        "@vitest/ui": "^2.0.5",
+        "@vitest/coverage-v8": "^3.2.4",
+        "@vitest/ui": "^3.2.4",
         "@wagmi/cli": "^2",
         "dotenv-cli": "7.3.0",
         "eslint": "^8",
         "eslint-config-cartesi": "*",
         "happy-dom": "^15.10.2",
-        "jsdom": "22.1.0",
+        "jsdom": "^26.1.0",
         "npm-run-all": "^4",
         "postcss": "^8",
         "postcss-preset-mantine": "^1.17.0",
         "postcss-simple-vars": "^7",
         "ts-node": "^10",
         "typescript": "^5",
-        "vitest": "^2.0.5"
+        "vitest": "^3.2.4"
     },
     "resolutions": {
-        "@types/react": "19.0.2",
-        "@types/react-dom": "19.0.2"
+        "@types/react": "19.1.8",
+        "@types/react-dom": "19.1.6"
     }
 }
