--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -29,15 +29,15 @@
         "@react-spring/web": "^10.0.1",
         "@shazow/whatsabi": "^0.14.1",
         "@tanstack/react-query": "^5.27.5",
-        "@vercel/analytics": "^1.2.2",
-        "@vercel/speed-insights": "^1.0.10",
+        "@vercel/analytics": "^1.5.0",
+        "@vercel/speed-insights": "^1.2.0",
         "dexie": "^4.0.11",
         "encoding": "^0.1",
         "graphql": "^16",
         "graphql-tag": "^2",
-        "highlight.js": "11.10.0",
+        "highlight.js": "^11.11.1",
         "highlightjs-solidity": "^2.0.6",
-        "jotai": "^2.9.0",
+        "jotai": "^2.12.5",
         "lokijs": "^1",
         "next": "15.3.5",
         "pino-pretty": "^10",
@@ -55,18 +55,7 @@
     },
     "devDependencies": {
         "@cartesi/tsconfig": "*",
-        "@graphql-codegen/add": "^5",
-        "@graphql-codegen/cli": "^5",
-        "@graphql-codegen/client-preset": "^4",
-        "@graphql-codegen/import-types-preset": "^3.0.0",
-        "@graphql-codegen/named-operations-object": "^3.0.0",
-        "@graphql-codegen/typed-document-node": "^5",
-        "@graphql-codegen/typescript": "^4",
-        "@graphql-codegen/typescript-operations": "^4",
-        "@graphql-codegen/typescript-urql": "^4",
-        "@graphql-typed-document-node/core": "^3",
-        "@playwright/test": "^1.37.0",
-        "@sunodo/wagmi-plugin-hardhat-deploy": "^0.2",
+        "@playwright/test": "^1.53.2",
         "@synthetixio/synpress": "^3.7.3",
         "@testing-library/jest-dom": "^6.6.3",
         "@testing-library/react": "^16.3.0",
@@ -78,11 +67,9 @@
         "@vitejs/plugin-react": "^4.3.1",
         "@vitest/coverage-v8": "^3.2.4",
         "@vitest/ui": "^3.2.4",
-        "@wagmi/cli": "^2",
-        "dotenv-cli": "7.3.0",
         "eslint": "^8",
         "eslint-config-cartesi": "*",
-        "happy-dom": "^15.10.2",
+        "happy-dom": "^18.0.1",
         "jsdom": "^26.1.0",
         "npm-run-all": "^4",
         "postcss": "^8",
