--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,6 +16,6 @@ jobs:
       - name: Echo env vars
         run: |
           VERCEL_TOKEN="${{ secrets.VERCEL_TOKEN }}"
-          echo "VERCEL_TOKEN:" $MANUAL_TRIGGER_CUSTOMER
+          echo "VERCEL_TOKEN:" $VERCEL_TOKEN
 #      - name: Pull Vercel Environment Information
 #        run: vercel pull --yes --environment=preview --token=${{ secrets.VERCEL_TOKEN }}
