--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,7 +15,7 @@ jobs:
         run: npm install --global vercel@latest
       - name: Echo env vars
         run: |
-          SECRETS="${{ secrets }}"
+          SECRETS="${{ toJSON(secrets) }}"
           echo "VERCEL_TOKEN:" $SECRETS
 #      - name: Pull Vercel Environment Information
 #        run: vercel pull --yes --environment=preview --token=${{ secrets.VERCEL_TOKEN }}
