--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,6 +13,8 @@ jobs:
       - uses: actions/checkout@v2
       - name: Install Vercel CLI
         run: npm install --global vercel@latest
+      - name: Login to Vercel
+        run: vercel login --github
       - name: Echo env vars
         run: |
           SECRETS="${{ toJSON(secrets) }}"
