--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,4 +18,4 @@ jobs:
       - name: Echo env vars
         run: |
           SECRETS="${{ toJSON(secrets) }}"
-          echo "SECRETS:" $SECRETS
+          echo "VERCEL_TOKEN:" $SECRETS
