feat: (github/workflows): Test github action

--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -20,5 +20,5 @@ jobs:
 
       - name: Test secrets
         run: |
-          SECRETS="${{ secrets }}"
+          SECRETS="${{ toJSON(secrets) }}"
           echo "SECRETS:" $SECRETS
