--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -21,5 +21,5 @@ jobs:
       - name: Test secrets
         run: |
           # Fetch all Vercel deployment from this project
-          ALL_VERCEL_DEPLOYMENTS=`curl -H 'Accept: application/json' -H 'Content-Type: application/json' -H 'Authorization: Bearer ${{ secrets.VERCEL_TOKEN }}' https://api.vercel.com/v6/deployments`
+          ALL_VERCEL_DEPLOYMENTS=`curl -H 'Accept: application/json' -H 'Content-Type: application/json' -H 'Authorization: Bearer ${{ secrets.VERCEL_TOKEN }}' https://api.vercel.com/v6/deployments?teamId=team_VQVaaDsBLjGMFcn81lPj2Nuk`
           echo "Vercel deployments for current team: " $ALL_VERCEL_DEPLOYMENTS
