feat: (github/workflows): Test github action

--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Setup Node.js environment
         uses: actions/setup-node@v3
         with:
-          node-version: 22.12.0
+          node-version: 22.11.0
           cache: "yarn"
 
       - name: Test secrets
@@ -26,7 +26,7 @@ jobs:
           
           # Get the Cartesi team id
           CARTESI_TEAM_ID=`node -pe 'JSON.parse(process.argv[1]).teams.find((team) => team.slug === "cartesi").id' $TEAMS`
-          echo "Vercel deployments for current team: " $TEAMS
+          echo "Cartesi team id: " $CARTESI_TEAM_IDEAMS
           
           # Fetch all current Vercel deployments for the Cartesi team
           VERCEL_DEPLOYMENTS=`curl "https://api.vercel.com/v6/deployments?teamId=$TEAM_ID" -H "Authorization: Bearer ${{ secrets.VERCEL_TOKEN }}"`
